--- a/app/globals.css
+++ b/app/globals.css
@@ -106,3 +106,11 @@ body {
 .flip img {
   transform: rotateY(180deg);
 }
+
+
+/* separator css */
+
+
+.separator {
+  background-image: linear-gradient(to right, transparent 30%, teal 40%, blue 60%, transparent 70%);
+}
