--- a/app/globals.css
+++ b/app/globals.css
@@ -93,7 +93,7 @@ body {
   width: 20px;
   height: 20px;
   border-radius: 50% 50%;
-  background: url('ericsportfolio/public/knitted-wool.svg');
+  background: url('public/knitted-wool.svg');
   background-size: cover;
   border: 1px solid white;
 }
