--- a/app/globals.css
+++ b/app/globals.css
@@ -95,3 +95,19 @@ body {
   border-radius: 50% 50%;
   border: 1px solid white;
 }
+
+@keyframes flyInLeft {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0; /* Add this line */
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.animate-flyInLeft {
+  animation: flyInLeft 0.5s ease forwards;
+  opacity: 0; /* Add this line to hide the text initially */
+}
