--- a/app/globals.css
+++ b/app/globals.css
@@ -111,3 +111,37 @@ body {
   animation: flyInLeft 0.5s ease forwards;
   opacity: 0; /* Add this line to hide the text initially */
 }
+
+.cv-button {
+  @apply tracking-wider select-none relative border-2 py-2.5
+  px-5 font-medium uppercase transition-colors before:absolute
+  before:left-0 before:top-0 before:-z-10 before:h-full before:w-full
+  before:origin-top-left before:scale-x-0 before:transition-transform
+  before:duration-300 before:content-[''] before:hover:scale-x-100
+  bg-transparent text-teal-200 border-teal-200 before:border-green-500 hover:text-gray-800 before:bg-teal-100;
+}
+
+.mobile-cv-button {
+  @apply flex items-center justify-center w-6 h-6
+  border-gray-400 border-2 text-xxs font-bold rounded-full
+  bg-gradient-to-b from-yellow-200 to-red-300 text-black dark:text-white
+  dark:bg-gradient-to-b dark:from-teal-200 dark:to-gray-700;
+}
+
+.info-box {
+  @apply mt-4 bg-gray-100 dark:bg-black border-solid rounded-lg
+  dark:border-double border-2 dark:border-teal-200 border-gray-800
+  w-60 md:w-full bg-opacity-10 backdrop-filter backdrop-blur-sm
+  dark:bg-opacity-10  dark:backdrop-filter dark:backdrop-blur-sm
+  hover:border-yellow-100 transition duration-500
+  dark:hover:border-teal-700 dark:transition dark:duration-500;
+}
+
+.heading-text {
+  @apply text-lg font-medium pb-6 text-white
+  group-hover:bg-clip-text group-hover:text-transparent group-hover:bg-gradient-to-r
+  group-hover:from-gray-200 group-hover:via-gray-900 group-hover:to-gray-600 group-hover:animate-text
+  dark:group-hover:bg-clip-text dark:group-hover:text-transparent
+  dark:group-hover:bg-gradient-to-r dark:group-hover:from-teal-400
+  dark:group-hover:via-white dark:group-hover:to-teal-700 dark:group-hover:animate-text;
+}
