--- a/app/globals.css
+++ b/app/globals.css
@@ -118,8 +118,7 @@ body {
   before:left-0 before:top-0 before:-z-10 before:h-full before:w-full
   before:origin-top-left before:scale-x-0 before:transition-transform
   before:duration-300 before:content-[''] before:hover:scale-x-100
-  bg-transparent
-  hover:text-gray-800 before:bg-teal-100;
+  bg-transparent hover:text-gray-800 before:bg-teal-100;
 }
 
 .mobile-cv-button {
