--- a/app/globals.css
+++ b/app/globals.css
@@ -131,7 +131,7 @@ body {
   w-60 md:w-full bg-opacity-10 backdrop-filter backdrop-blur-sm
   dark:bg-opacity-10  dark:backdrop-filter dark:backdrop-blur-sm
   hover:border-yellow-100 transition duration-500
-  dark:hover:border-teal-700 dark:transition dark:duration-500;
+  dark:hover:border-teal-700 dark:transition dark:duration-500 md:hover:scale-105;
 }
 
 .heading-text {
